tests/snapshots/write_stdin_batch__write_stdin_accepts_multiple_calls.snap
---
source: tests/write_stdin_batch.rs
expression: rendered
---
== session: list_inputs ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "x <- 1\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "> x <- 1"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "x + 1\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "> x + 1\n[1] 2"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
