tests/snapshots/write_stdin_batch__write_stdin_drives_browser@transcript.snap
---
source: tests/write_stdin_batch.rs
expression: transcript
---
== session: browser_queue ==
1) r_repl timeout_ms=10000
>>> f <- function() { browser(); x <- 1; x <- x + 1; x }

2) r_repl timeout_ms=10000
>>> f()
<<< Called from: f()
<<< Browse[1]> 

3) r_repl timeout_ms=10000
>>> n
<<< debug at #1: x <- 1
<<< Browse[1]> 

4) r_repl timeout_ms=10000
>>> n
<<< debug at #1: x <- x + 1
<<< Browse[1]> 

5) r_repl timeout_ms=10000
>>> c
<<< [1] 2
