tests/snapshots/write_stdin_batch__write_stdin_files_multidrain_plot_then_later_stdout_snapshot.snap
---
source: tests/write_stdin_batch.rs
expression: rendered
---
== session: files_multidrain_plot_then_later_stdout ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "plot(1:10)\nSys.sleep(2)\ncat('done\\n')\n",
    "timeout_ms": 200
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "image",
      "mime_type": "image/png",
      "data_len": 0
    },
    {
      "type": "text",
      "text": "> plot(1:10)\n> Sys.sleep(2)"
    },
    {
      "type": "text",
      "text": "<<repl status: busy, write_stdin timeout reached; elapsed_ms=N>>"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "done"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
