tests/snapshots/write_stdin_batch__write_stdin_pager_hits@transcript.snap
---
source: tests/write_stdin_batch.rs
expression: transcript
---
== session: pager_hits_queue ==
1) r_repl timeout_ms=30000
>>> line <- paste(rep("x", 200), collapse = ""); for (i in 1:200) cat(sprintf("line%04d %s\n", i, line))
<<< 
<<< --More-- (140p, 0.2%, @0..103/42103)

2) r_repl timeout_ms=30000
>>> :hits line0150
<<< #1 @31393 root
<<<   > line0150 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...
<<< 
<<< --More-- (35p, 75.0%, @31393..31603/42103)

3) r_repl timeout_ms=30000
>>> :n
<<< line0151 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
<<< 
<<< --More-- (35p, 75.5%, @31603..31813/42103)

4) r_repl timeout_ms=30000
>>> :q
<<< (END, 75.5%, @31603..31813/42103)
